# api_service

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  serve_rpc.py
.github/workflows/: docker-build-push.yml
alembic/versions/: 66dc02cefda9_init.py  6b7b7432649d_init.py  9e365dca24cf_add_title_indicators_table.py
auction_api/: api.py  types.py  utils.py
auction_api/types/: common.py  lot.py  search.py
basic_api/: base_client.py  types.py
core/: logger.py
database/crud/: base.py  car_make.py  car_model.py  damage.py  document.py  drive.py  status.py  title_indicators.py  transmission.py  vehicle_type.py
database/models/: __init__.py  base_filter_mixin.py  car_make.py  car_model.py  damage.py  document.py  drive.py  status.py  title_indicators.py  transmission.py  vehicle_type.py
database/schemas/: car_make.py  car_model.py  filters.py  title_indicators.py
dependencies/: auction_api_service.py
request_schemas/: lot.py  search_params.py  title_indicators.py
routers/: health.py
routers/v1/: filters.py  history_lots.py  lots.py  sales_history.py  similar_archived_sales.py  title_indicators.py
rpc_server/: buf.gen.yaml  cache.py  health.py  lot_rpc.py
schemas/: filters.py  sale_history.py  similar_archived_sales.py  similar_history_lots.py  vin_or_lot.py
scripts/: cars_filters.json  create_makes_models.py  init_db.py
scripts/src/: damage_types.csv  document.csv  drive.csv  makes.csv  models.csv  status.csv  title_indicators.csv  transmissions.csv  vehicle_type.csv
services/: transform_slugs.py
vinas_external_api_app/: pyproject.toml
vinas_external_api_app/src/vinas_external_api_app/: config.py  main.py
vinas_external_api_app/src/vinas_external_api_app/auction_api/: __init__.py  api.py  types.py  utils.py
vinas_external_api_app/src/vinas_external_api_app/basic_api/: __init__.py  base_client.py  types.py
vinas_external_api_app/src/vinas_external_api_app/schemas/: vin_or_lot.py
